# GameEngien

./: CONTRIBUTING.md  LICENSE  README.md
.github/: FUNDING.yml
GameEngine/: GameEngine.sln  GameEngine.vcxproj  LICENSE  README.md
GameEngine/AiDocs/: AGENTS.md  README.md  dev-docs.md  user-docs.md
GameEngine/CrossPlatform/: CMakeLists.txt  README.md  WORKFLOWS.md
GameEngine/CrossPlatform/src/: AudioEngine.cpp  AudioEngine.h  BmpWriter.cpp  Renderer2D.cpp  TestScene.cpp  TestScene.h  VulkanRenderer.cpp  VulkanRenderer.h  main.cpp
GameEngine/EngineFiles/: README-Projects.txt  README.txt  settings.json
GameEngine/EnginePlugins/: README.md
GameEngine/EnginePlugins/ExampleCPlugin/: ExampleCPlugin.c
GameEngine/GameEditor/: GameEditor.vcxproj  README.md
GameEngine/GameEditor/src/: EditorDraw.cpp  EditorDraw.h  EditorPhysics.cpp  EditorPhysics.h  EditorProject.cpp  EditorProject.h  TODO.txt  main.cpp
GameEngine/GameEditor/x64/Debug/: GameEditor.exe.recipe  GameEditor.ilk  vc145.idb
GameEngine/GameEngine/x64/Debug/: GameEngine.exe.recipe  GameEngine.ilk  vc145.idb
GameEngine/GameEngineCore/: GameEngine.cpp
GameEngine/GameEngineCore/App/: AppState.cpp  AppState.h  AudioPlayback.cpp  AudioPlayback.h  OverlayWindow.cpp  OverlayWindow.h  PluginAPI.h  PluginManager.cpp  PluginManager.h  ProjectConfig.cpp  ProjectConfig.h  Settings.cpp  Settings.h  VideoPlayback.cpp  VideoPlayback.h
GameEngine/GameEngineCore/Colliders/: BoxCollider2D.h
GameEngine/GameEngineCore/Objects/: Component.h  GameObject.cpp  GameObject.h  ObjectAPI.cpp  ObjectAPI.h
GameEngine/GameEngineCore/RenderPipeline2D/: Renderer2D.cpp  Renderer2D.h
GameEngine/GameEngineCore/Scripts/: BlueBox2DTest.cpp  BlueBox2DTest.h  README.md
GameEngine/GameEngineCore/WindowRenderer/: README.md
GameEngine/GameEngine_Linux/: CMakeLists.txt
GameEngine/GameEngine_Linux/src/: BmpWriter.h  Renderer2D.h  main.cpp
GameEngine/MusicEngine_Linux/: CMakeLists.txt  README.md
GameEngine/MusicEngine_Linux/src/: main.cpp
GameEngine/scripts/: README.md  build-and-log.ps1  quick-smoke.ps1  run-clang-tidy.ps1  run-cppcheck.ps1  run-gameeditor-smoke.ps1  run-inspectcode.ps1  run-musicengine-example.ps1  run_smoke_tests.cpp
GameEngine/scripts/cpp/: game_script_template.cpp
GameEngine/scripts/csharp/: GameScriptTemplate.csx  MusicEngineIntegration.csx  SoundSampler.csx
GameEngine/tests/GameEditor.Test/: README.md  run-editor-tests.ps1
GameEngine/tests/GameEngine.Test/: GameEngine.Test.vcxproj  GameEngine.Test.vcxproj.filters  TestApp.cpp
GameEngine/tests/ai/: GameEngineTestNotes.md
GameEngine/x64/Debug/: GameEngine.exp  GameEngine.lib
(+53 files in other folders)
